<resources>
    <string name="app_name">ChatApp</string>
    <string name="set_button">Set</string>
    <string name="port_entry">Port Entry (Do first)</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="enter_message">Enter Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
